# cortex

backend/: .env.example  .gitignore  config.py  main.py  pyproject.toml
backend/agents/: llm_agent.py  orchestrator.py  rag_agent.py  web_search_agent.py
backend/api/: chat.py  documents.py
backend/rag/: document_processor.py  embeddings.py  vector_store.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatInput.tsx  ChatMessage.tsx  DocumentList.tsx  DocumentUpload.tsx  Sidebar.tsx  SourceBadge.tsx
